fixed minor issue of the list of todos overlapping with the text area and add button

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -38,8 +38,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin-top: -300px;
+  justify-content: flex-start;
+  margin: 50px;
 }
 
 .todo-list{
